--- a/src/app/components/ricerca-pesce/ricerca-pesce.component.html
+++ b/src/app/components/ricerca-pesce/ricerca-pesce.component.html
@@ -42,10 +42,10 @@
       <ion-label>
         <!-- PARTE IMMAGINE -->
         <div *ngIf="pesce.fishImages.length != 0" style="width: 20%;float:left;">
-          <img src="{{pesce.fishImages[0].thumbUrl}}" style="width:100%">
+          <img src="{{pesce.fishImages[0].thumbUrl}}" style="width:100%;border-radius: 5px;">
         </div>
         <div *ngIf="pesce.fishImages.length == 0" style="width: 20%;float:left;">
-          <img src="assets/img/icon-fish.png/" style="width:100%">
+          <img src="assets/img/icon-fish.png/" style="width:100%;border-radius: 5px;">
         </div>
         <!-- PARTE TESTO -->
         <div style="width: 80%;padding:0px 5px;float:right">
