--- a/src/app/pages/ricerca/ricerca.page.html
+++ b/src/app/pages/ricerca/ricerca.page.html
@@ -13,7 +13,7 @@
 
 <ion-content>
   
-  <ion-infinite-scroll threshold="100px" (ionInfinite)="loadData($event)">
+  <ion-infinite-scroll threshold="100px" (ionInfinite)="loadData($event)" style="display: none;">
     <ion-infinite-scroll-content
       loadingSpinner="bubbles"
       loadingText="Loading more data...">
