--- a/src/app/pages/selezione-oggetto/selezione-oggetto.page.html
+++ b/src/app/pages/selezione-oggetto/selezione-oggetto.page.html
@@ -10,7 +10,7 @@
 
 <ion-content>
 
-  <ion-infinite-scroll threshold="100px" (ionInfinite)="loadData($event)">
+  <ion-infinite-scroll threshold="100px" (ionInfinite)="loadData($event)" style="display: none;">
     <ion-infinite-scroll-content
       loadingSpinner="bubbles"
       loadingText="Loading more data...">
