--- a/src/app/pages/gestisci-acquario/gestisci-acquario.page.html
+++ b/src/app/pages/gestisci-acquario/gestisci-acquario.page.html
@@ -24,7 +24,7 @@
     </ion-card-content>
   </ion-card>
 
-  <ion-button [routerLink]="['/misure-acquario']" expand="block">
+  <ion-button [routerLink]="['/misure-acquario']" expand="block" style="padding: 0px 15px;margin: 7px 0px 20px 0px;">
     <ion-icon slot="start" name="flask-outline"></ion-icon>
     Aggiungi Misurazioni
   </ion-button>
