--- a/src/app/pages/misure-acquario/misure-acquario.page.html
+++ b/src/app/pages/misure-acquario/misure-acquario.page.html
@@ -85,14 +85,11 @@
         </ion-row> 
       </ion-grid>
     </ion-card-content>
-  </ion-card>
-  
+  </ion-card>  
 </ion-content>
 
 <ion-row>
   <ion-col size="12" class="ion-text-center">
-    <ion-button expand="full" (click)="processForm(form)">
-      Salva misurazione
-    </ion-button>
+    <ion-button [routerLink]="['/aggiungi']">Salva misurazione</ion-button>
   </ion-col>
 </ion-row>
