--- a/src/app/components/scheda-pesce/scheda-pesce.component.html
+++ b/src/app/components/scheda-pesce/scheda-pesce.component.html
@@ -16,105 +16,118 @@
 
   <!-- INFORMAZIONI DEL PESCE -->
   <ion-card>
+    <ion-list-header class="ion-text-center title-list-header "><ion-label>Informazioni</ion-label></ion-list-header>
     <ion-list>
-      <ion-list-header><ion-label class="ion-text-center">Informazioni</ion-label></ion-list-header>
       <ion-item>
-        <ion-label position="stacked">Nome scientifico</ion-label>
-        <ion-input type="text">{{pesce.scientificName}}</ion-input>
+        <ion-label>
+          <h3>Nome scientifico</h3>
+          <p class="item-paragraph-full">{{pesce.scientificName}}</p>
+        </ion-label>
       </ion-item>
       <ion-item>
-        <ion-label position="stacked">Descrizione</ion-label>
-        <ion-input style="word-break:break-word;">{{pesce.description}}</ion-input>
+        <ion-label>
+          <h3>Descrizione</h3>
+          <p class="item-paragraph-full">{{pesce.description}}</p>
+          </ion-label>
       </ion-item> 
       <ion-item>
-        <ion-label position="stacked">Zona di origine</ion-label>
-        <ion-input>{{pesce.originZone}}</ion-input>
+        <ion-label>
+          <h3>Zona di origine</h3>
+          <p class="item-paragraph-full">{{pesce.originZone}}</p>
+          </ion-label>
       </ion-item>
       <ion-item>
-        <ion-label position="stacked">Temperamento</ion-label>
-        <ion-input>{{pesce.temperament}}</ion-input>
+        <ion-label>
+          <h3>Temperamento</h3>
+          <p class="item-paragraph-full">{{pesce.temperament}}</p>
+          </ion-label>
       </ion-item>
       <ion-item>
-        <ion-label position="stacked">Lunghezza massima</ion-label>
-        <ion-input>{{pesce.maxLength}} cm</ion-input>
+        <ion-label>
+          <h3>Lunghezza massima</h3>
+          <p class="item-paragraph-full">{{pesce.maxLength}} cm</p>
+          </ion-label>
       </ion-item>
       <ion-item>
-        <ion-label position="stacked">Flusso acqua</ion-label>
-        <ion-input>{{pesce.waterFlow}}</ion-input>
+        <ion-label>
+          <h3>Flusso acqua</h3>
+          <p class="item-paragraph-full">{{pesce.waterFlow}}</p>
+          </ion-label>
       </ion-item>
       <ion-item>
-        <ion-label position="stacked">Livello vasca</ion-label>
-        <ion-input>{{pesce.tankLevel}}</ion-input>
+        <ion-label>
+          <h3>Livello vasca</h3>
+          <p class="item-paragraph-full">{{pesce.tankLevel}}</p>
+          </ion-label>
       </ion-item>
       <ion-item>
-        <ion-label position="stacked">Livello di cura</ion-label>
-        <ion-input>{{pesce.careLevel}}</ion-input>
+        <ion-label>
+          <h3>Livello di cura</h3>
+          <p class="item-paragraph-full">{{pesce.careLevel}}</p>
+          </ion-label>
       </ion-item>
       <ion-item>
-        <ion-label position="stacked">Alimentazione</ion-label>
-        <ion-input>{{pesce.diet}}</ion-input>
+        <ion-label>
+          <h3>Alimentazione</h3>
+          <p class="item-paragraph-full">{{pesce.diet}}</p>
+          </ion-label>
       </ion-item>
     </ion-list>
   </ion-card>
 
   <!--PARAMETRI PESCE-->
   <ion-card>
+    <ion-list-header class="ion-text-center title-list-header"><ion-label>Parametri</ion-label></ion-list-header>
     <ion-list>
-      <ion-list-header><ion-label class="ion-text-center">Parametri</ion-label></ion-list-header>
-      <ion-item>
-        <ion-row>
-          <ion-col>
-            <ion-label position="stacked">Lunghezza Min Vasca</ion-label>
-            <ion-input>{{pesce.tankMinLength}} cm</ion-input>
-          </ion-col>
-          <ion-col>
-            <ion-label position="stacked">Volume Min Vasca</ion-label>
-            <ion-input>{{pesce.tankMinVolume}} litri</ion-input>
-          </ion-col>
-        </ion-row>
-      </ion-item>
-      <ion-item>
-        <ion-row>
-          <ion-col>
-            <ion-label position="stacked">Ph Min</ion-label>
-            <ion-input>{{pesce.phMin}}</ion-input>
-          </ion-col>
-          <ion-col>
-            <ion-label position="stacked">Ph Max</ion-label>
-            <ion-input>{{pesce.phMax}}</ion-input>
-          </ion-col>
-        </ion-row>
-      </ion-item>
-      <ion-item>
-        <ion-row>
-          <ion-col>
-            <ion-label position="stacked">Gh Min</ion-label>
-            <ion-input>{{pesce.ghMin}}</ion-input>
-          </ion-col>
-          <ion-col>
-            <ion-label position="stacked">Gh Max</ion-label>
-            <ion-input>{{pesce.ghMax}}</ion-input>
-          </ion-col>
-        </ion-row>
-      </ion-item>
-      <ion-item>
-        <ion-row>
-          <ion-col>
-            <ion-label position="stacked">Temperatura Min</ion-label>
-            <ion-input>{{pesce.temperatureMin}}°C</ion-input>
-          </ion-col>
-          <ion-col>
-            <ion-label position="stacked">Temperatura Max</ion-label>
-            <ion-input>{{pesce.temperatureMax}}°C</ion-input>
-          </ion-col>
-        </ion-row>
-      </ion-item>
+      <ion-row class="ion-margin ion-text-center">
+        <ion-col size="6">
+          <ion-label>Lunghezza Min Vasca</ion-label> <br>
+          <span class="item-paragraph-size-lg">{{pesce.tankMinLength}} cm</span>
+        </ion-col>
+        <ion-col size="6">
+          <ion-label>Volume Min Vasca</ion-label><br>
+          <span class="item-paragraph-size-lg">{{pesce.tankMinVolume}} litri</span>
+        </ion-col>
+      </ion-row>
+      <ion-item-divider class="item-divider"></ion-item-divider>
+      <ion-row class="ion-margin ion-text-center">
+        <ion-col size="6">
+          <ion-label>Ph Min</ion-label><br>
+          <span class="item-paragraph-size-lg">{{pesce.phMin}}</span>
+        </ion-col>
+        <ion-col size="6">
+          <ion-label>Ph Max</ion-label><br>
+          <span class="item-paragraph-size-lg">{{pesce.phMax}}</span>
+        </ion-col>
+      </ion-row>
+      <ion-item-divider class="item-divider"></ion-item-divider>
+      <ion-row class="ion-margin ion-text-center">
+        <ion-col size="6">
+          <ion-label>Gh Min</ion-label><br>
+          <span class="item-paragraph-size-lg">{{pesce.ghMin}}</span>
+        </ion-col>
+        <ion-col size="6">
+          <ion-label>Gh Max</ion-label><br>
+          <span class="item-paragraph-size-lg">{{pesce.ghMax}}</span>
+        </ion-col>
+      </ion-row>
+      <ion-item-divider class="item-divider"></ion-item-divider>
+      <ion-row class="ion-margin ion-text-center">
+        <ion-col size="6">
+          <ion-label>Temperatura Min</ion-label><br>
+          <span class="item-paragraph-size-lg">{{pesce.temperatureMin}}</span>
+        </ion-col>
+        <ion-col size="6">
+          <ion-label>Temperatura Max</ion-label><br>
+          <span class="item-paragraph-size-lg">{{pesce.temperatureMax}}</span>
+        </ion-col>
+      </ion-row>
     </ion-list>
   </ion-card>
   
-  <ion-row>
+  <ion-row *ngIf="getAppState().currenVasca">
     <ion-col size="12" class="ion-text-center">
-      <ion-button [routerLink]="['/aggiungi']">Aggiungi</ion-button>
+      <ion-button expand="block" [routerLink]="['/aggiungi']">Aggiungi</ion-button>
     </ion-col>
   </ion-row>
 
