--- a/src/app/components/scheda-piante/scheda-piante.component.html
+++ b/src/app/components/scheda-piante/scheda-piante.component.html
@@ -16,116 +16,110 @@
 
   <!-- INFORMAZIONI DEL PIANTA -->
   <ion-card>
-    <ion-list>
-      <ion-list-header><ion-label class="ion-text-center">Informazioni</ion-label></ion-list-header>
+    
+    
+      <ion-list-header class="ion-text-center title-list-header "><ion-label>Informazioni</ion-label></ion-list-header>
+      <ion-list>
       <ion-item>
-        <ion-label position="stacked">Descrizione</ion-label>
-        <ion-input style="word-break:break-word;">{{piante.description}}</ion-input>
+        <ion-label>
+          <h3>Descrizione</h3>
+          <p class="item-paragraph-full">{{piante.description}}</p>
+        </ion-label>
       </ion-item> 
       <ion-item>
-        <ion-label position="stacked">Zona di origine</ion-label>
-        <ion-input>{{piante.originZone}}</ion-input>
+        <ion-label>
+        <h3>Zona di origine</h3>
+        <p class="item-paragraph-full">{{piante.originZone}}</p> 
+      </ion-label>
       </ion-item>
       <ion-item>
-        <ion-label position="stacked">Illuminazione</ion-label>
-        <ion-input>{{piante.lighting}}</ion-input>
+        <ion-label>
+          <h3>Illuminazione</h3>
+          <p class="item-paragraph-full">{{piante.lighting}}</p> 
+        </ion-label>
       </ion-item>
       <ion-item>
-        <ion-label position="stacked">Co2</ion-label>
-        <ion-input>{{piante.co2}}</ion-input>
+        <ion-label>
+          <h3>Co2</h3>
+          <p class="item-paragraph-full">{{piante.co2}}</p> 
+        </ion-label>
       </ion-item>
       <ion-item>
-        <ion-label position="stacked">Tasso di crescita</ion-label>
-        <ion-input>{{piante.growThrate}}</ion-input>
+        <ion-label>
+          <h3>Tasso di crescita</h3>
+          <p class="item-paragraph-full">{{piante.growThrate}}</p> 
+        </ion-label>
       </ion-item>
       <ion-item>
-        <ion-label position="stacked">Livello di cura</ion-label>
-        <ion-input>{{piante.careLevel}}</ion-input>
+        <ion-label>
+          <h3>Livello di cura</h3>
+          <p class="item-paragraph-full">{{piante.careLevel}}</p> 
+        </ion-label>
       </ion-item>
     </ion-list>
   </ion-card>
 
   <!--PARAMETRI PIANTA-->
   <ion-card>
+    <ion-list-header class="ion-text-center title-list-header"><ion-label>Parametri</ion-label></ion-list-header>
     <ion-list>
-      <ion-list-header><ion-label class="ion-text-center">Parametri</ion-label></ion-list-header>
-      <ion-item>
-        <ion-row>
-          <ion-col>
-            <ion-label position="stacked">Altezza Minima</ion-label>
-            <ion-input *ngIf="piante.minHeight!=-1">{{piante.minHeight}} cm</ion-input>
-            <ion-input *ngIf="piante.minHeight==-1">n.d.</ion-input>
-          </ion-col>
-          <ion-col>
-            <ion-label position="stacked">Altezza Massima</ion-label>
-            <ion-input *ngIf="piante.maxHeight!=-1">{{piante.maxHeight}} cm</ion-input>
-            <ion-input *ngIf="piante.maxHeight==-1">n.d.</ion-input>
-          </ion-col>
-        </ion-row>
-      </ion-item>
-      <ion-item>
-        <ion-row>
-          <ion-col>
-            <ion-label position="stacked">Ph Min</ion-label>
-            <ion-input *ngIf="piante.phMin!=-1">{{piante.phMin}}</ion-input>
-            <ion-input *ngIf="piante.phMin==-1">n.d.</ion-input>
-          </ion-col>
-          <ion-col>
-            <ion-label position="stacked">Ph Max</ion-label>
-            <ion-input *ngIf="piante.phMax!=-1">{{piante.phMax}}</ion-input>
-            <ion-input *ngIf="piante.phMax==-1">n.d.</ion-input>
-          </ion-col>
-        </ion-row>
-      </ion-item>
-      <ion-item>
-        <ion-row>
-          <ion-col>
-            <ion-label position="stacked">Gh Min</ion-label>
-            <ion-input *ngIf="piante.ghMin!=-1">{{piante.ghMin}}</ion-input>
-            <ion-input *ngIf="piante.ghMin==-1">n.d.</ion-input>
-          </ion-col>
-          <ion-col>
-            <ion-label position="stacked">Gh Max</ion-label>
-            <ion-input *ngIf="piante.ghMax!=-1">{{piante.ghMax}}</ion-input>
-            <ion-input *ngIf="piante.ghMax==-1">n.d.</ion-input>
-          </ion-col>
-        </ion-row>
-      </ion-item>
-    <ion-item>
-        <ion-row>
-          <ion-col>
-            <ion-label position="stacked">Kh Min</ion-label>
-            <ion-input *ngIf="piante.khMin!=-1">{{piante.khMin}}</ion-input>
-            <ion-input *ngIf="piante.khMin==-1">n.d.</ion-input>
-          </ion-col>
-          <ion-col>
-            <ion-label position="stacked">Kh Max</ion-label>
-            <ion-input *ngIf="piante.khMax!=-1">{{piante.khMax}}</ion-input>
-            <ion-input *ngIf="piante.khMax==-1">n.d.</ion-input>
-          </ion-col>
-        </ion-row>
-      </ion-item>
-      <ion-item>
-        <ion-row>
-          <ion-col>
-            <ion-label position="stacked">Temperatura Min</ion-label>
-            <ion-input *ngIf="piante.temperatureMin!=-1">{{piante.temperatureMin}}°C</ion-input>
-            <ion-input *ngIf="piante.temperatureMin==-1">n.d.</ion-input>
-          </ion-col>
-          <ion-col>
-            <ion-label position="stacked">Temperatura Max</ion-label>
-            <ion-input *ngIf="piante.temperatureMax!=-1">{{piante.temperatureMax}}°C</ion-input>
-            <ion-input *ngIf="piante.temperatureMax==-1">n.d.</ion-input>
-          </ion-col>
-        </ion-row>
-      </ion-item>
+      <ion-row class="ion-margin ion-text-center">
+        <ion-col size="6">
+          <ion-label>Altezza minima</ion-label> <br>
+          <span class="item-paragraph-size-lg">{{piante.minHeight}} cm</span>
+        </ion-col>
+        <ion-col size="6">
+          <ion-label>Altezza massima</ion-label><br>
+          <span class="item-paragraph-size-lg">{{piante.maxHeight}} litri</span>
+        </ion-col>
+      </ion-row>
+      <ion-item-divider class="item-divider"></ion-item-divider>
+      <ion-row class="ion-margin ion-text-center">
+        <ion-col size="6">
+          <ion-label>Ph Min</ion-label><br>
+          <span class="item-paragraph-size-lg">{{piante.phMin}}</span>
+        </ion-col>
+        <ion-col size="6">
+          <ion-label>Ph Max</ion-label><br>
+          <span class="item-paragraph-size-lg">{{piante.phMax}}</span>
+        </ion-col>
+      </ion-row>
+      <ion-item-divider class="item-divider"></ion-item-divider>
+      <ion-row class="ion-margin ion-text-center">
+        <ion-col size="6">
+          <ion-label>Gh Min</ion-label><br>
+          <span class="item-paragraph-size-lg">{{piante.ghMin}}</span>
+        </ion-col>
+        <ion-col size="6">
+          <ion-label>Gh Max</ion-label><br>
+          <span class="item-paragraph-size-lg">{{piante.ghMax}}</span>
+        </ion-col>
+      </ion-row>
+      <ion-item-divider class="item-divider"></ion-item-divider>
+      <ion-row class="ion-margin ion-text-center">
+        <ion-col size="6">
+          <ion-label>Kh Min</ion-label><br>
+          <span class="item-paragraph-size-lg">{{piante.khMin}}</span>
+        </ion-col>
+        <ion-col size="6">
+          <ion-label>Kh Max</ion-label><br>
+          <span class="item-paragraph-size-lg">{{piante.khMax}}</span>
+        </ion-col>
+        <ion-col size="6">
+          <ion-label>Tempertura Min</ion-label><br>
+          <span class="item-paragraph-size-lg">{{piante.temperatureMin}}</span>
+        </ion-col>
+        <ion-col size="6">
+          <ion-label>Tempertura Max</ion-label><br>
+          <span class="item-paragraph-size-lg">{{piante.temperatureMax}}</span>
+        </ion-col>
+      </ion-row>
     </ion-list>
   </ion-card>
-
-  <ion-row>
-    <ion-col size="12" class="ion-text-center">
-      <ion-button [routerLink]="['/aggiungi']">Aggiungi</ion-button>
-    </ion-col>
-  </ion-row>
+<ion-row *ngIf="getAppState().currenVasca">
+  <ion-col size="12" class="ion-text-center">
+    <ion-button expand="block" [routerLink]="['/aggiungi']">Aggiungi</ion-button>
+  </ion-col>
+</ion-row>
 
 </p>
