Modifiche a ricerca pesci e piante con l'aggiunta della vasca quando sto cercando pesci per la mia vasca

--- a/src/app/pages/gestisci-acquario/gestisci-acquario.page.html
+++ b/src/app/pages/gestisci-acquario/gestisci-acquario.page.html
@@ -3,7 +3,7 @@
     <ion-buttons slot="start">
       <ion-back-button></ion-back-button>
     </ion-buttons>
-    <ion-title>Gestisci acquario</ion-title>
+    <ion-title class="ion-text-center">Gestisci acquario</ion-title>
     <ion-buttons slot="end">
       <ion-button [routerLink]="['/nuovo-acquario']">
         <ion-icon slot="icon-only" name="create-outline"></ion-icon>
