modifica parametro da currenVasca a currentVasca aggiunta button di elimina e aggiungi pianta/pesce

--- a/src/app/components/scheda-pesce/scheda-pesce.component.html
+++ b/src/app/components/scheda-pesce/scheda-pesce.component.html
@@ -125,10 +125,10 @@
     </ion-list>
   </ion-card>
   
-  <ion-row *ngIf="getAppState().currenVasca">
+  <!--ion-row *ngIf="getAppState().currentVasca">
     <ion-col size="12" class="ion-text-center">
       <ion-button expand="block" [routerLink]="['/aggiungi']">Aggiungi</ion-button>
     </ion-col>
-  </ion-row>
+  </ion-row-->
 
 </p>
