--- a/src/app/components/scheda-piante/scheda-piante.component.html
+++ b/src/app/components/scheda-piante/scheda-piante.component.html
@@ -116,10 +116,11 @@
       </ion-row>
     </ion-list>
   </ion-card>
-<ion-row *ngIf="getAppState().currenVasca">
+  
+<!--ion-row *ngIf="getAppState().currentVasca">
   <ion-col size="12" class="ion-text-center">
     <ion-button expand="block" [routerLink]="['/aggiungi']">Aggiungi</ion-button>
   </ion-col>
-</ion-row>
+</ion-row-->
 
 </p>
