--- a/src/app/pages/selezione-oggetto/selezione-oggetto.page.html
+++ b/src/app/pages/selezione-oggetto/selezione-oggetto.page.html
@@ -1,10 +1,21 @@
 <ion-header>
   <ion-toolbar>
+
     <ion-buttons slot="start">
       <ion-back-button></ion-back-button>
     </ion-buttons>
+
     <ion-title class="ion-text-center">Dettaglio</ion-title>
     
+    <ion-buttons slot="end">
+      <ion-button *ngIf="getAppstate().canDelete" expand="block">
+        <ion-icon size="large" color="danger" name="trash-outline"></ion-icon>
+      </ion-button>
+      <ion-button *ngIf="getAppstate().canAdd" expand="block">
+        <ion-icon size="large" color="success" name="add-circle-outline"></ion-icon>
+      </ion-button>
+    </ion-buttons>
+
   </ion-toolbar>
 </ion-header>
 
@@ -17,8 +28,8 @@
     </ion-infinite-scroll-content>
   </ion-infinite-scroll>
   
-  <app-scheda-pesce *ngIf="appstate.searchState == 'pesci'"> </app-scheda-pesce>
-  <app-scheda-piante *ngIf="appstate.searchState == 'piante'"> </app-scheda-piante>
-  <app-scheda-accessori *ngIf="appstate.searchState == 'accessori'"> </app-scheda-accessori>
+  <app-scheda-pesce *ngIf="getAppstate().searchState == 'pesci'"> </app-scheda-pesce>
+  <app-scheda-piante *ngIf="getAppstate().searchState == 'piante'"> </app-scheda-piante>
+  <app-scheda-accessori *ngIf="getAppstate().searchState == 'accessori'"> </app-scheda-accessori>
 </ion-content>
 
