--- a/src/app/pages/selezione-oggetto/selezione-oggetto.page.html
+++ b/src/app/pages/selezione-oggetto/selezione-oggetto.page.html
@@ -8,10 +8,10 @@
     <ion-title class="ion-text-center">Dettaglio</ion-title>
     
     <ion-buttons slot="end">
-      <ion-button *ngIf="getAppstate().canDelete" expand="block">
+      <ion-button  *ngIf="getAppstate().canDelete" (click)="deleteVivo()" expand="block">
         <ion-icon size="large" color="danger" name="trash-outline"></ion-icon>
       </ion-button>
-      <ion-button *ngIf="getAppstate().canAdd" expand="block">
+      <ion-button *ngIf="getAppstate().canAdd" (click)="addVivo()" expand="block">
         <ion-icon size="large" color="success" name="add-circle-outline"></ion-icon>
       </ion-button>
     </ion-buttons>
