--- a/src/app/pages/gestisci-acquario/gestisci-acquario.page.html
+++ b/src/app/pages/gestisci-acquario/gestisci-acquario.page.html
@@ -20,38 +20,59 @@
     </ion-card-header>
   
     <ion-card-content>
+      <!--DESCRIZIONE-->
       <ion-card-subtitle>{{acquario.descrizione}}</ion-card-subtitle>
-      
-      <!--h3 *ngIf="acquario.parameter!=null && acquario.parameter.phMax!=-1 && acquario.parameter.phMin!=-1" class="parameterTitle" style="">Parametri</h3-->
-      <div style="margin-top:10px;font-size: 15px;">
-        <div *ngIf="acquario.parameter!=null && acquario.parameter.phMax!=-1 && acquario.parameter.phMin!=-1" style="width:18%;" class="parameterContainer">
+      <!--PARAMETRI-->
+      <div *ngIf="acquario.parameter!=null" style="margin-top:10px;font-size: 15px;">
+        
+        <div *ngIf="acquario.parameter.phMax!=-1 && acquario.parameter.phMin!=-1" style="width:18%;" 
+            class="parameterContainer" [class]="(misuraPh=='') ? 'warning' : (misuraPh>acquario.parameter.phMax || misuraPh<acquario.parameter.phMin) ? 'danger' : ''">
           <span class="parameterBadge" style="">PH</span>
           <span class="parameterMax" style=""><p style="font-size: 10px;margin-bottom: -5px;margin-top: 2px;">MAX</p>{{acquario.parameter.phMax}}</span>
-          <span class="parameter" style="line-height: 26px;">n.v.</span>
+          <span class="parameter" style="line-height: 26px;min-height: 28px;">
+            <ion-label *ngIf="misuraPh!=''">{{misuraPh}}</ion-label>
+            <ion-label *ngIf="misuraPh==''">n.v.</ion-label>
+          </span>
           <span class="parameterMin" style="">{{acquario.parameter.phMin}}<p style="font-size: 10px;margin-bottom: 2px;margin-top: -5px;">MIN</p></span>
         </div>
-        <div *ngIf="acquario.parameter!=null && acquario.parameter.ghMax!=-1 && acquario.parameter.ghMin!=-1" style="width:18%" class="parameterContainer">
+
+        <div *ngIf="acquario.parameter.ghMax!=-1 && acquario.parameter.ghMin!=-1" style="width:18%" 
+            class="parameterContainer" [class]="(misuraGh=='') ? 'warning' : (misuraGh>acquario.parameter.ghMax || misuraGh<acquario.parameter.ghMin) ? 'danger' : ''">
           <span class="parameterBadge" style="">GH</span>
           <span class="parameterMax" style=""><p style="font-size: 10px;margin-bottom: -5px;margin-top: 2px;">MAX</p>{{acquario.parameter.ghMax}}</span>
-          <span class="parameter" style="line-height: 26px;">n.v.</span>
+          <span class="parameter" style="line-height: 26px;min-height: 28px;">
+            <ion-label *ngIf="misuraGh!=''">{{misuraGh}}</ion-label>
+            <ion-label *ngIf="misuraGh==''">n.v.</ion-label>
+          </span>
           <span class="parameterMin" style="">{{acquario.parameter.ghMin}}<p style="font-size: 10px;margin-bottom: 2px;margin-top: -5px;">MIN</p></span>
         </div>
-        <div *ngIf="acquario.parameter!=null && acquario.parameter.khMax!=-1 && acquario.parameter.khMin!=-1" style="width:18%" class="parameterContainer">
+
+        <div *ngIf="acquario.parameter.khMax!=-1 && acquario.parameter.khMin!=-1" style="width:18%" 
+            class="parameterContainer" [class]="(misuraKh=='') ? 'warning' : (misuraKh>acquario.parameter.khMax || misuraKh<acquario.parameter.khMin) ? 'danger' : ''">
           <span class="parameterBadge" style="">KH</span>
           <span class="parameterMax" style=""><p style="font-size: 10px;margin-bottom: -5px;margin-top: 2px;">MAX</p>{{acquario.parameter.khMax}}</span>
-          <span class="parameter" style="line-height: 26px;">n.v.</span>
+          <span class="parameter" style="line-height: 26px;min-height: 28px;">
+            <ion-label *ngIf="misuraKh!=''">{{misuraKh}}</ion-label>
+            <ion-label *ngIf="misuraKh==''">n.v.</ion-label>
+          </span>
           <span class="parameterMin" style="">{{acquario.parameter.khMin}}<p style="font-size: 10px;margin-bottom: 2px;margin-top: -5px;">MIN</p></span>
         </div>
-        <div *ngIf="acquario.parameter!=null && acquario.parameter.temperatureMax!=-1 && acquario.parameter.temperatureMin!=-1" style="width:38%" class="parameterContainer">
+
+        <div *ngIf="acquario.parameter.temperatureMax!=-1 && acquario.parameter.temperatureMin!=-1" style="width:38%" 
+            class="parameterContainer" [class]="(misuraTemperatura=='') ? 'warning' : (misuraTemperatura>acquario.parameter.temperatureMax || misuraTemperatura<acquario.parameter.temperatureMin) ? 'danger' : ''">
           <span class="parameterBadge" style="">Temperature</span>
           <span class="parameterMax" style=""><p style="font-size: 10px;margin-bottom: -5px;margin-top: 2px;">MAX</p>{{acquario.parameter.temperatureMax}}°</span>
-          <span class="parameter" style="line-height: 26px;">n.v.</span>
+          <span class="parameter" style="line-height: 26px;min-height: 28px;">
+            <ion-label *ngIf="misuraTemperatura!=''">{{misuraTemperatura}}°</ion-label>
+            <ion-label *ngIf="misuraTemperatura==''">n.v.</ion-label>
+          </span>
           <span class="parameterMin" style="">{{acquario.parameter.temperatureMin}}°<p style="font-size: 10px;margin-bottom: 2px;margin-top: -5px;">MIN</p></span>
         </div>
       </div>
     </ion-card-content>
   </ion-card>
 
+  <!--AGGIUNGI MISURA-->
   <ion-button [routerLink]="['/misure-acquario']" expand="block" style="padding: 0px 15px;margin: 7px 0px 0px 0px;">
     <ion-icon slot="start" name="flask-outline"></ion-icon>
     Aggiungi Misurazioni
@@ -74,7 +95,6 @@
     <ion-item (click)="onClickPesce(pesce)" [routerLink]="['/selezione-oggetto']" *ngFor="let pesce of acquario.fishs">
 
       <ion-label>
-
         <!-- PARTE IMMAGINE -->
         <div *ngIf="pesce.fishImages.length != 0" style="width: 20%;float:left;">
           <img src="{{pesce.fishImages[0].thumbUrl}}" style="width:100%;border-radius: 5px;">
