--- a/src/app/pages/misure-acquario/misure-acquario.page.html
+++ b/src/app/pages/misure-acquario/misure-acquario.page.html
@@ -13,170 +13,170 @@
 </ion-header>
 
 <ion-content>
-  <ion-card>
-    <ion-card-header>
-      <ion-card-subtitle>Seleziona la tipologia di misura</ion-card-subtitle>
-      <ion-item>
-        <ion-label>Tipo misura</ion-label>
-        <ion-select #segment placeholder="Seleziona" interface="popover">
-          <ion-select-option value="Ph">PH</ion-select-option>
-          <ion-select-option value="Gh">GH</ion-select-option>
-          <ion-select-option value="Kh">Kh</ion-select-option>
-          <ion-select-option value="Temperatura">Temperatura</ion-select-option>
-        </ion-select>
-      </ion-item>
-    </ion-card-header>
-  </ion-card>
+  <form #form="ngForm" (ngSubmit)="processForm(form)" novalidate>
+  
+    <ion-card>
+      <ion-card-header>
+        <ion-card-subtitle>Seleziona la tipologia di misura</ion-card-subtitle>
+        <ion-item>
+          <ion-label>Tipo misura</ion-label>
+          <ion-select #segment placeholder="Seleziona" interface="popover" [(ngModel)]="modelMisura.tipo" #tipo="ngModel" name="tipo">
+            <ion-select-option value="PH">PH</ion-select-option>
+            <ion-select-option value="GH">GH</ion-select-option>
+            <ion-select-option value="KH">Kh</ion-select-option>
+            <ion-select-option value="TEMPERATURA">Temperatura</ion-select-option>
+          </ion-select>
+        </ion-item>
+      </ion-card-header>
+    </ion-card>
 
-  <!--PH-->
-  <ion-card>
-    <ion-card-content *ngIf="segment.value == 'Ph'">
-      <form #form="ngForm" (ngSubmit)="processForm(form)" novalidate>
-        <ion-input type="text" hidden (ngModel)="modelMisura.tipo" #tipo="ngModel" name="tipo" value="PH"></ion-input>
-        <ion-card-subtitle>Inserisci il valore di PH</ion-card-subtitle>
+    <!--PH-->
+    <ion-card>
+      <ion-card-content *ngIf="segment.value == 'PH'">
+          <ion-card-subtitle>Inserisci il valore di PH</ion-card-subtitle>
+          <ion-grid>
+            <ion-row>
+              <ion-col>
+                <ion-item>
+                  <ion-label position="stacked" [color]="!valore.valid && valore.touched ? 'danger' : ''">Valore Ph</ion-label>
+                  <ion-input type="number" placeholder="Inserisci Ph" [(ngModel)]="modelMisura.valore" required="true" #valore="ngModel" name="valore" required></ion-input>
+                </ion-item>
+              </ion-col>
+            </ion-row>
+          </ion-grid>
+          <ion-button (click)="processForm(form)" expand="block" [disabled]="!form.valid">
+            <ion-icon slot="start" name="flask-outline"></ion-icon>
+            Salva misurazione
+          </ion-button>
+      </ion-card-content>
+      <ion-card-content *ngIf="segment.value == 'PH'">
+        <ion-card-subtitle>Storia misure PH</ion-card-subtitle>
         <ion-grid>
-          <ion-row>
-            <ion-col>
-              <ion-item>
-                <ion-label position="stacked" [color]="!valore.valid && valore.touched ? 'danger' : ''">Valore Ph</ion-label>
-                <ion-input type="number" placeholder="Inserisci Ph" [(ngModel)]="modelMisura.valore" required="true" #valore="ngModel" name="valore" required></ion-input>
-              </ion-item>
-            </ion-col>
+          <ion-row style="border: 2px solid #3880ff;">
+            <ion-col style="border-right: 2px solid #3880ff;text-align: center;text-transform: uppercase;font-weight: bold;"><ion-label>Valore</ion-label></ion-col>
+            <ion-col style="text-align: center;text-transform: uppercase;font-weight: bold;"><ion-label>Data Misura</ion-label></ion-col>
           </ion-row>
+          <div *ngFor="let measure of acquario.measures">
+            <ion-row *ngIf="measure.tipo == 'PH'" style="border: 1px solid #3880ff;border-top: none;">
+              <ion-col style="border-right: 1px solid #3880ff;text-align: center;"><ion-label>{{measure.valore}}</ion-label></ion-col>
+              <ion-col style="border-right: 1px solid #3880ff;text-align: center;"><ion-label>{{measure.dataCreazione}}</ion-label></ion-col>
+            </ion-row>
+          </div>
         </ion-grid>
-        <ion-button (click)="processForm(form)" expand="block" [disabled]="!form.valid">
-          <ion-icon slot="start" name="flask-outline"></ion-icon>
-          Salva misurazione
-        </ion-button>
-      </form>
-    </ion-card-content>
-    <ion-card-content *ngIf="segment.value == 'Ph'">
-      <ion-card-subtitle>Storia misure PH</ion-card-subtitle>
-      <ion-grid>
-        <ion-row style="border: 2px solid #3880ff;">
-          <ion-col style="border-right: 2px solid #3880ff;text-align: center;text-transform: uppercase;font-weight: bold;"><ion-label>Valore</ion-label></ion-col>
-          <ion-col style="text-align: center;text-transform: uppercase;font-weight: bold;"><ion-label>Data Misura</ion-label></ion-col>
-        </ion-row>
-        <div *ngFor="let measure of acquario.measures">
-          <ion-row *ngIf="measure.tipo == 'PH'" style="border: 1px solid #3880ff;border-top: none;">
-            <ion-col style="border-right: 1px solid #3880ff;text-align: center;"><ion-label>{{measure.valore}}</ion-label></ion-col>
-            <ion-col style="border-right: 1px solid #3880ff;text-align: center;"><ion-label>{{measure.dataCreazione}}</ion-label></ion-col>
-          </ion-row>
-        </div>
-      </ion-grid>
-    </ion-card-content>
+      </ion-card-content>
 
-    <!--GH-->
-    <ion-card-content *ngIf="segment.value == 'Gh'">
-        <ion-card-subtitle>Inserisci il valore di GH</ion-card-subtitle>
-        <ion-grid >
-          <ion-row>
-            <ion-col>
-              <ion-item>
-                <ion-label position="stacked" [color]="!misura_valore.valid && misura_valore.touched ? 'danger' : ''">Valore Gh</ion-label>
-                <ion-input type="number" placeholder="Inserisci Gh" [(ngModel)]="modelMisura.valore" required="true" #misura_valore="ngModel" name="misura_valore"></ion-input>
-              </ion-item>
-            </ion-col>
-          </ion-row>
-        </ion-grid>
-        <ion-button (click)="processForm('GH')" expand="block" [disabled]="!form.valid">
-          <ion-icon slot="start" name="flask-outline"></ion-icon>
-          Salva misurazione
-        </ion-button>
-    </ion-card-content>
-    <ion-card-content *ngIf="segment.value == 'Gh'">
-      <ion-card-subtitle>Storia misure GH</ion-card-subtitle>
-      <ion-grid>
-        <ion-row style="border: 2px solid #3880ff;">
-          <ion-col style="border-right: 2px solid #3880ff;text-align: center;text-transform: uppercase;font-weight: bold;"><ion-label>Valore</ion-label></ion-col>
-          <ion-col style="text-align: center;text-transform: uppercase;font-weight: bold;"><ion-label>Data Misura</ion-label></ion-col>
-        </ion-row>
-        <div *ngFor="let measure of acquario.measures">
-          <ion-row *ngIf="measure.tipo == 'GH'" style="border: 1px solid #3880ff;border-top: none;">
-            <ion-col style="border-right: 1px solid #3880ff;text-align: center;"><ion-label>{{measure.valore}}</ion-label></ion-col>
-            <ion-col style="border-right: 1px solid #3880ff;text-align: center;"><ion-label>{{measure.dataCreazione}}</ion-label></ion-col>
-          </ion-row>
-        </div>
-      </ion-grid>
-    </ion-card-content>
-
-    <!--KH-->
-    <ion-card-content *ngIf="segment.value == 'Kh'">
-        <ion-card-subtitle>Inserisci il valore di kH</ion-card-subtitle>
+      <!--GH-->
+      <ion-card-content *ngIf="segment.value == 'GH'">
+          <ion-card-subtitle>Inserisci il valore di GH</ion-card-subtitle>
+          <ion-grid >
+            <ion-row>
+              <ion-col>
+                <ion-item>
+                  <ion-label position="stacked" [color]="!misura_valore.valid && misura_valore.touched ? 'danger' : ''">Valore Gh</ion-label>
+                  <ion-input type="number" placeholder="Inserisci Gh" [(ngModel)]="modelMisura.valore" required="true" #misura_valore="ngModel" name="misura_valore"></ion-input>
+                </ion-item>
+              </ion-col>
+            </ion-row>
+          </ion-grid>
+          <ion-button (click)="processForm(form)" expand="block" [disabled]="!form.valid">
+            <ion-icon slot="start" name="flask-outline"></ion-icon>
+            Salva misurazione
+          </ion-button>
+      </ion-card-content>
+      <ion-card-content *ngIf="segment.value == 'GH'">
+        <ion-card-subtitle>Storia misure GH</ion-card-subtitle>
         <ion-grid>
-          <ion-row>
-            <ion-col>
-              <ion-item>
-                <ion-label position="stacked" [color]="!misura_valore.valid && misura_valore.touched ? 'danger' : ''">Valore Kh</ion-label>
-                <ion-input type="number" placeholder="Inserisci Kh" [(ngModel)]="modelMisura.valore" required="true" #misura_valore="ngModel" name="misura_valore"></ion-input>
-              </ion-item>
-            </ion-col>
+          <ion-row style="border: 2px solid #3880ff;">
+            <ion-col style="border-right: 2px solid #3880ff;text-align: center;text-transform: uppercase;font-weight: bold;"><ion-label>Valore</ion-label></ion-col>
+            <ion-col style="text-align: center;text-transform: uppercase;font-weight: bold;"><ion-label>Data Misura</ion-label></ion-col>
           </ion-row>
+          <div *ngFor="let measure of acquario.measures">
+            <ion-row *ngIf="measure.tipo == 'GH'" style="border: 1px solid #3880ff;border-top: none;">
+              <ion-col style="border-right: 1px solid #3880ff;text-align: center;"><ion-label>{{measure.valore}}</ion-label></ion-col>
+              <ion-col style="border-right: 1px solid #3880ff;text-align: center;"><ion-label>{{measure.dataCreazione}}</ion-label></ion-col>
+            </ion-row>
+          </div>
         </ion-grid>
-        <ion-button (click)="processForm('KH')" expand="block" [disabled]="!form.valid">
-          <ion-icon slot="start" name="flask-outline"></ion-icon>
-          Salva misurazione
-        </ion-button>
-    </ion-card-content>
-    <ion-card-content *ngIf="segment.value == 'Kh'">
-      <ion-card-subtitle>Storia misure PH</ion-card-subtitle>
-      <ion-grid>
-        <ion-row style="border: 2px solid #3880ff;">
-          <ion-col style="border-right: 2px solid #3880ff;text-align: center;text-transform: uppercase;font-weight: bold;"><ion-label>Valore</ion-label></ion-col>
-          <ion-col style="text-align: center;text-transform: uppercase;font-weight: bold;"><ion-label>Data Misura</ion-label></ion-col>
-        </ion-row>
-        <div *ngFor="let measure of acquario.measures">
-          <ion-row *ngIf="measure.tipo == 'KH'" style="border: 1px solid #3880ff;border-top: none;">
-            <ion-col style="border-right: 1px solid #3880ff;text-align: center;" ><ion-label>{{measure.valore}}</ion-label></ion-col>
-            <ion-col style="border-right: 1px solid #3880ff;text-align: center;" ><ion-label>{{measure.dataCreazione}}</ion-label></ion-col>
-          </ion-row>
-        </div>
-      </ion-grid>
-    </ion-card-content>
+      </ion-card-content>
 
-    <!--Temperatura-->
-    <ion-card-content *ngIf="segment.value == 'Temperatura'">
-        <ion-card-subtitle>Inserisci valore e unità di misura della temperatura</ion-card-subtitle>
+      <!--KH-->
+      <ion-card-content *ngIf="segment.value == 'KH'">
+          <ion-card-subtitle>Inserisci il valore di kH</ion-card-subtitle>
+          <ion-grid>
+            <ion-row>
+              <ion-col>
+                <ion-item>
+                  <ion-label position="stacked" [color]="!misura_valore.valid && misura_valore.touched ? 'danger' : ''">Valore Kh</ion-label>
+                  <ion-input type="number" placeholder="Inserisci Kh" [(ngModel)]="modelMisura.valore" required="true" #misura_valore="ngModel" name="misura_valore"></ion-input>
+                </ion-item>
+              </ion-col>
+            </ion-row>
+          </ion-grid>
+          <ion-button (click)="processForm(form)" expand="block" [disabled]="!form.valid">
+            <ion-icon slot="start" name="flask-outline"></ion-icon>
+            Salva misurazione
+          </ion-button>
+      </ion-card-content>
+      <ion-card-content *ngIf="segment.value == 'KH'">
+        <ion-card-subtitle>Storia misure PH</ion-card-subtitle>
         <ion-grid>
-          <ion-row>
-            <ion-col>
-              <ion-item>
-                <ion-label position="stacked" [color]="!misura_valore.valid && misura_valore.touched ? 'danger' : ''">Valore temperatura</ion-label>
-                <ion-input type="number" placeholder="Inserisci temperatura" [(ngModel)]="modelMisura.valore" required="true" #misura_valore="ngModel" name="misura_valore"></ion-input>
-              </ion-item>
-              <ion-item>
-                <ion-label  [color]="!misura_unita.valid && misura_unita.touched ? 'danger' : ''">Unità di misura</ion-label>
-                <ion-select placeholder="Seleziona unità di misura" interface="popover" [(ngModel)]="modelMisura.unita" required="true" #misura_unita="ngModel" name="misura_unita">
-                  <ion-select-option value="celsius">*Celsius</ion-select-option>
-                  <ion-select-option value="fahrenheit">°Fahrenheit</ion-select-option>
-                  <ion-select-option value="kelvin">°Kelvin</ion-select-option>
-                </ion-select>
-              </ion-item>
-            </ion-col>
+          <ion-row style="border: 2px solid #3880ff;">
+            <ion-col style="border-right: 2px solid #3880ff;text-align: center;text-transform: uppercase;font-weight: bold;"><ion-label>Valore</ion-label></ion-col>
+            <ion-col style="text-align: center;text-transform: uppercase;font-weight: bold;"><ion-label>Data Misura</ion-label></ion-col>
           </ion-row>
+          <div *ngFor="let measure of acquario.measures">
+            <ion-row *ngIf="measure.tipo == 'KH'" style="border: 1px solid #3880ff;border-top: none;">
+              <ion-col style="border-right: 1px solid #3880ff;text-align: center;" ><ion-label>{{measure.valore}}</ion-label></ion-col>
+              <ion-col style="border-right: 1px solid #3880ff;text-align: center;" ><ion-label>{{measure.dataCreazione}}</ion-label></ion-col>
+            </ion-row>
+          </div>
         </ion-grid>
-        <ion-button (click)="processForm('TEMPERATURA')" expand="block" [disabled]="!form.valid">
-          <ion-icon slot="start" name="flask-outline"></ion-icon>
-          Salva misurazione
-        </ion-button>
-    </ion-card-content>
-    <ion-card-content *ngIf="segment.value == 'Temperatura'">
-      <ion-card-subtitle>Storia misure Temperatura</ion-card-subtitle>
-      <ion-grid>
-        <ion-row style="border: 2px solid #3880ff;">
-          <ion-col size="3" style="border-right: 2px solid #3880ff;text-align: center;text-transform: uppercase;font-weight: bold;"><ion-label>Valore</ion-label></ion-col>
-          <ion-col size="3" style="border-right: 2px solid #3880ff;text-align: center;text-transform: uppercase;font-weight: bold;"><ion-label>Unità</ion-label></ion-col>
-          <ion-col size="6" style="text-align: center;text-transform: uppercase;font-weight: bold;"><ion-label>Data Misura</ion-label></ion-col>
-        </ion-row>
-        <div *ngFor="let measure of acquario.measures">
-          <ion-row *ngIf="measure.tipo == 'TEMPERATURA'" style="border: 1px solid #3880ff;border-top: none;">
-            <ion-col size="3" style="border-right: 1px solid #3880ff;text-align: center;" ><ion-label>{{measure.valore}}</ion-label></ion-col>
-            <ion-col size="3" style="border-right: 1px solid #3880ff;text-align: center;" ><ion-label>{{measure.unita}}</ion-label></ion-col>
-            <ion-col size="6" style="border-right: 1px solid #3880ff;text-align: center;" ><ion-label>{{measure.dataCreazione}}</ion-label></ion-col>
-          </ion-row>
-        </div>
-      </ion-grid>
-    </ion-card-content>
+      </ion-card-content>
 
-  </ion-card>  
+      <!--Temperatura-->
+      <ion-card-content *ngIf="segment.value == 'TEMPERATURA'">
+          <ion-card-subtitle>Inserisci valore e unità di misura della temperatura</ion-card-subtitle>
+          <ion-grid>
+            <ion-row>
+              <ion-col>
+                <ion-item>
+                  <ion-label position="stacked" [color]="!misura_valore.valid && misura_valore.touched ? 'danger' : ''">Valore temperatura</ion-label>
+                  <ion-input type="number" placeholder="Inserisci temperatura" [(ngModel)]="modelMisura.valore" required="true" #misura_valore="ngModel" name="misura_valore"></ion-input>
+                </ion-item>
+                <ion-item>
+                  <ion-label  [color]="!misura_unita.valid && misura_unita.touched ? 'danger' : ''">Unità di misura</ion-label>
+                  <ion-select placeholder="Seleziona unità di misura" interface="popover" [(ngModel)]="modelMisura.unita" required="true" #misura_unita="ngModel" name="misura_unita">
+                    <ion-select-option value="celsius">*Celsius</ion-select-option>
+                    <ion-select-option value="fahrenheit">°Fahrenheit</ion-select-option>
+                    <ion-select-option value="kelvin">°Kelvin</ion-select-option>
+                  </ion-select>
+                </ion-item>
+              </ion-col>
+            </ion-row>
+          </ion-grid>
+          <ion-button (click)="processForm(form)" expand="block" [disabled]="!form.valid">
+            <ion-icon slot="start" name="flask-outline"></ion-icon>
+            Salva misurazione
+          </ion-button>
+      </ion-card-content>
+      <ion-card-content *ngIf="segment.value == 'TEMPERATURA'">
+        <ion-card-subtitle>Storia misure Temperatura</ion-card-subtitle>
+        <ion-grid>
+          <ion-row style="border: 2px solid #3880ff;">
+            <ion-col size="3" style="border-right: 2px solid #3880ff;text-align: center;text-transform: uppercase;font-weight: bold;"><ion-label>Valore</ion-label></ion-col>
+            <ion-col size="3" style="border-right: 2px solid #3880ff;text-align: center;text-transform: uppercase;font-weight: bold;"><ion-label>Unità</ion-label></ion-col>
+            <ion-col size="6" style="text-align: center;text-transform: uppercase;font-weight: bold;"><ion-label>Data Misura</ion-label></ion-col>
+          </ion-row>
+          <div *ngFor="let measure of acquario.measures">
+            <ion-row *ngIf="measure.tipo == 'TEMPERATURA'" style="border: 1px solid #3880ff;border-top: none;">
+              <ion-col size="3" style="border-right: 1px solid #3880ff;text-align: center;" ><ion-label>{{measure.valore}}</ion-label></ion-col>
+              <ion-col size="3" style="border-right: 1px solid #3880ff;text-align: center;" ><ion-label>{{measure.unita}}</ion-label></ion-col>
+              <ion-col size="6" style="border-right: 1px solid #3880ff;text-align: center;" ><ion-label>{{measure.dataCreazione}}</ion-label></ion-col>
+            </ion-row>
+          </div>
+        </ion-grid>
+      </ion-card-content>
+
+    </ion-card>  
+  </form>
 </ion-content>
