Effettuate le  pagine di registrazione utente e login

--- a/src/app/pages/registrazione-utente/registrazione-utente.page.html
+++ b/src/app/pages/registrazione-utente/registrazione-utente.page.html
@@ -1,6 +1,9 @@
 <ion-header>
   <ion-toolbar>
-    <ion-title>registrazione utente</ion-title>
+    <ion-buttons slot="start">
+      <ion-back-button></ion-back-button>
+    </ion-buttons>
+    <ion-title classclass="ion-text-center"> Registrazione utente</ion-title>
   </ion-toolbar>
 </ion-header>
 
